--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,16 +3,16 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: hubourge <hubourge@student.42angouleme.    +#+  +:+       +#+         #
+#    By: hubourge <hubourge@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/31 14:29:47 by hubourge          #+#    #+#              #
-#    Updated: 2025/01/03 15:53:34 by hubourge         ###   ########.fr        #
+#    Updated: 2025/01/06 16:33:15 by hubourge         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = gcc
 
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -fPIC -g
 
 NAME = libft.a
 
